--- a/style/index.css
+++ b/style/index.css
@@ -1,6 +1,6 @@
 *{font-size: 100%;font-family: 'Open Sans', sans-serif;font-size:1vw}
 
-.menu-container {background:#2A74DF;width:4%;position:fixed;height:100%;}
+.menu-container {background:#2A74DF;width:4%;position:fixed;height:100%;z-index:100;}
 
 .menu-container .menu-icon-block {text-align:center;margin-top:15px;}
 
@@ -24,7 +24,7 @@
 
 .accordion{}
 .accordion .accordion-head{background:#F5F5F5;padding:7px 10px;font-weight:bold;border:1px solid #E0E0E0;cursor:pointer;}
-.accordion .accordion-head img.acc-toggle-icon{float:right;width:20px;margin-top:7px;}
+.accordion .accordion-head img.acc-toggle-icon{float:right;width:17px;margin-top:5px;}
 .accordion .accordion-body{padding:10px;border:1px solid #E0E0E0;display:none;}
 
 /*--------Accordion code ends here---------------*/
@@ -45,7 +45,7 @@ table td input[type='checkbox']{height:16px;width:16px;cursor:pointer;}
 
 .edit-btn{background:#E9F1FC;border:none;color:#2A74DF;font-size:1vw;margin-top:5px}
 
-.edit-btn i{font-weight:bold;font-size:14px;}
+.edit-btn i{font-weight:bold;font-size:1vw;}
 
 ul{padding-left:0px;}
 
@@ -60,7 +60,12 @@ ul li::marker{float:left;margin-left:20px;color:#C4C4C4;}
 
 
 @media (max-width: 768px) {
-
+    .menu-container{height:40px;width:100%;top:0;text-align:right;}
+    .menu-container .menu-icon-block{display:inline-block;margin-top:0;}
+    .menu-container .menu-icon-block img{margin:10px;height:20px;}
+    #main{margin-left:0;margin-top:40px;}
+    .menu-exp-container{margin-left:0;background:white;}
+    .menu-exp-container .nav-icon{display:none;}
 }
 
 
