--- a/style/index.css
+++ b/style/index.css
@@ -1,6 +1,6 @@
 *{font-size: 100%;font-family: 'Open Sans', sans-serif;font-size:1vw}
 
-.menu-container {background:#2A74DF;width:4%;position:fixed;height:100%;z-index:100;}
+.menu-container {background:#2A74DF;width:4%;position:fixed;height:100%;}
 
 .menu-container .menu-icon-block {text-align:center;margin-top:15px;}
 
@@ -13,6 +13,8 @@
 .menu-exp-container .nav-icon{border-radius:50%;box-shadow:1px 1px 4px 1px rgba(0, 0, 0, 0.25);position:absolute;right:-15px;top:100px;background:white;cursor:pointer;height:30px;width:30px;text-align:center;display:flex;align-items:center;justify-content:center;}
 
 .menu-exp-container .nav-icon img{height:10px;width:10px;position:relative;top:1px;}
+
+.menu-container .mob-nav-icon{display:none;}
 
 #openNavIcon{transform:rotate(180deg)}
 
@@ -60,7 +62,7 @@ ul li::marker{float:left;margin-left:20px;color:#C4C4C4;}
 
 
 @media (max-width: 768px) {
-    .menu-container{height:40px;width:100%;top:0;text-align:right;}
+    .menu-container{height:40px;width:100%;top:0;text-align:right;z-index:100;}
     .menu-container .menu-icon-block{display:inline-block;margin-top:0;}
     .menu-container .menu-icon-block img{margin:10px;height:20px;}
     #main{margin-left:0;margin-top:40px;}
@@ -68,6 +70,7 @@ ul li::marker{float:left;margin-left:20px;color:#C4C4C4;}
     .menu-exp-container .nav-icon{display:none;}
     .menu-container .mob-nav-icon{display:inline-block;}
     i.fa-bars,i.fa-times{color:white;font-size:20px;margin:0 20px;position:relative;top:6px;}
+    .menu-exp-container a{border-bottom:1px solid #d6d6d6;}
 }
 
 
